# SurfaceDefectsIS

./: .env.example  .gitignore  Makefile  auth-public-key-base64.txt  auth-public-key.pem  clear.sh  docker-compose.yaml  import-tiles-to-minio.sh  index.html  make-tiles.sh  mobile.txt  out.txt  print.sh  prometheus.yml
AuthService/: Dockerfile  README.md  pyproject.toml
AuthService/app/: cli.py  main.py
AuthService/app/application/dependencies/: factories.py
AuthService/app/application/dto/: permission.py  role.py  user.py
AuthService/app/application/usecases/: base.py
AuthService/app/core/config/: settings.py
AuthService/app/domain/entities/: base.py  login_history.py  permission.py  role.py  session.py  user.py
AuthService/app/domain/exceptions/: auth.py  base.py  email.py  identifier.py  password.py  permission.py  role.py  session.py  user.py
AuthService/app/domain/repositories/: email_token.py  permission.py  role.py  session.py  uow.py  user.py
AuthService/app/domain/services/: email.py  password.py  token.py
AuthService/app/domain/values/: email.py  password.py
AuthService/app/infrastructure/database/: models.py  redis.py
AuthService/app/infrastructure/migrations/: env.py
AuthService/app/infrastructure/repositories/: email_token.py  permission.py  role.py  session.py  uow.py  user.py
AuthService/app/infrastructure/services/: email.py  password.py  token.py
DefectService/: Dockerfile  pyproject.toml
DefectService/app/: cli.py  main.py  test.py
DefectService/app/scripts/: download_osm.py
DefectService/app/tests/: repositories.py
(+135 files in other folders)
