[project]
name = "defectservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authx>=1.5.2",
    "fastapi>=0.135.3",
    "geoalchemy2>=0.18.4",
    "minio>=7.2.20",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "requests>=2.33.1",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.49",
    "typer>=0.24.1",
    "uvicorn>=0.43.0",
]
